<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeBook"
            type="com.sopt.welaaa.data.model.ResponseBookDto.Data" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.view.HomeFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/home_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:logo="@drawable/ic_home_logo"
                    app:menu="@menu/menu_toolbar"
                    tools:ignore="MissingConstraints">

                </androidx.appcompat.widget.Toolbar>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/home_tab"
                    style="@style/TextAppearance.Welaaa.System2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    app:layout_constraintTop_toBottomOf="@id/home_toolbar"
                    app:tabIndicatorColor="@color/welaaa_grey_900"
                    app:tabIndicatorHeight="2dp"
                    app:tabTextColor="@color/welaaa_grey_900"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_audio" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_novel" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_class" />


                </com.google.android.material.tabs.TabLayout>

                <View

                    android:id="@+id/view_main_green"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="@color/home_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_tab" />

                <TextView
                    android:id="@+id/tv_main_pick"
                    style="@style/TextAppearance.Welaaa.System2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="27dp"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/home_main_pick"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/view_main_green"
                    app:layout_constraintTop_toTopOf="@id/view_main_green" />

                <TextView
                    android:id="@+id/tv_main_title"
                    style="@style/TextAppearance.Welaaa.System1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/home_main_title"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/tv_main_pick"
                    app:layout_constraintTop_toBottomOf="@id/tv_main_pick" />

                <TextView
                    android:id="@+id/tv_main_content"
                    style="@style/TextAppearance.Welaaa.System4.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/home_main_content"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/tv_main_pick"
                    app:layout_constraintTop_toBottomOf="@id/tv_main_title" />

                <ImageView
                    android:id="@+id/iv_main_book"
                    android:layout_width="136dp"
                    android:layout_height="208dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/home_banner_main"
                    app:layout_constraintEnd_toEndOf="@id/view_main_green"
                    app:layout_constraintTop_toTopOf="@id/view_main_green" />

                <View
                    android:id="@+id/view_sub_pink"
                    android:layout_width="match_parent"
                    android:layout_height="70.89dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="34dp"
                    android:background="@drawable/radius_home_pink_banner"
                    app:layout_constraintTop_toBottomOf="@id/view_main_green" />

                <ImageView
                    android:id="@+id/iv_sub_book"
                    android:layout_width="54.83dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="14.95dp"
                    android:src="@drawable/home_banner_sub"
                    app:layout_constraintBottom_toBottomOf="@id/view_sub_pink"
                    app:layout_constraintEnd_toEndOf="@id/view_sub_pink" />

                <TextView
                    android:id="@+id/tv_sub_title"
                    style="@style/TextAppearance.Welaaa.System3.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13.96dp"
                    android:layout_marginTop="12dp"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/home_sub_title"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/view_sub_pink"
                    app:layout_constraintTop_toTopOf="@id/view_sub_pink" />

                <TextView
                    android:id="@+id/tv_sub_content"
                    style="@style/TextAppearance.Welaaa.System4.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/home_sub_content"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/tv_sub_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />

                <TextView
                    android:id="@+id/tv_recycler_listen"
                    style="@style/TextAppearance.Welaaa.System1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54.11dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/recycler_listen_title"
                    android:textColor="@color/welaaa_grey_900"
                    app:layout_constraintStart_toStartOf="@id/view_sub_pink"
                    app:layout_constraintTop_toBottomOf="@id/view_sub_pink" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_listen"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recycler_listen"
                    tools:listitem="@layout/item_listen" />

                <TextView
                    android:id="@+id/tv_recycler_like"
                    style="@style/TextAppearance.Welaaa.System1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="56dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/recycler_like_title"
                    android:textColor="@color/welaaa_grey_900"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerview_listen" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recycler_like"
                    tools:listitem="@layout/item_like_record" />

                <TextView
                    android:id="@+id/tv_recycler_month"
                    style="@style/TextAppearance.Welaaa.System1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="56dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/recycler_month_title"
                    android:textColor="@color/welaaa_grey_900"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerview_like" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recycler_month"
                    tools:listitem="@layout/item_month" />

                <TextView
                    android:id="@+id/tv_recycler_record"
                    style="@style/TextAppearance.Welaaa.System1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="56dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/recycler_record_title"
                    android:textColor="@color/welaaa_grey_900"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerview_month" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recycler_record"
                    tools:listitem="@layout/item_like_record" />


                <ImageView
                    android:id="@+id/iv_book_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57dp"
                    android:layout_marginBottom="16dp"
                    android:paddingHorizontal="20dp"
                    android:src="@drawable/home_bookreview"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/recyclerview_record" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>